--- a/udagram/udagram-api/.elasticbeanstalk/config.yml
+++ b/udagram/udagram-api/.elasticbeanstalk/config.yml
@@ -1,6 +1,6 @@
 branch-defaults:
   default:
-    environment: Udagram-server-dev
+    environment: udagram-server-dev
     group_suffix: null
 global:
   application_name: udagram-server
@@ -12,7 +12,7 @@ global:
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: default
+  profile: null
   repository: null
   sc: null
   workspace_type: Application
