--- a/udagram/udagram-api/.elasticbeanstalk/config.yml
+++ b/udagram/udagram-api/.elasticbeanstalk/config.yml
@@ -1,7 +1,6 @@
 branch-defaults:
   default:
     environment: udagram-server-dev
-    group_suffix: null
 global:
   application_name: udagram-server
   branch: null
@@ -14,5 +13,5 @@ global:
   platform_version: null
   profile: null
   repository: null
-  sc: null
+  sc: git
   workspace_type: Application
