--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,9 +58,7 @@ workflows:
   udagram:
     jobs:
       - build
-         - filters:
+          filters:
             branches:
               only:
                 - main
-          requires:
-            - build
