--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
   aws-cli: circleci/aws-cli@3.1.1
   # different jobs are calles later in the workflows sections
 jobs:
-  build:
+  prod:
     docker:
       # the base image can run most needed actions with orbs
       - image: "cimg/node:14.15"
@@ -55,9 +55,9 @@ jobs:
             npm run frontend:deploy
             
 workflows:
-  udagram:
+  build-deploy:
     jobs:
-      - build
+      - prod:
           filters:
             branches:
               only:
