--- a/udagram/udagram-api/package.json
+++ b/udagram/udagram-api/package.json
@@ -12,7 +12,7 @@
     "dev": "npx ts-node-dev --respawn --transpile-only ./src/server.ts",
     "prod": "npx tsc && node ./www/server.js",
     "clean": "rm -rf www/ || true",
-    "deploy": "eb list && eb use udagram-server-dev && && eb deploy",
+    "deploy": "eb list && eb use udagram-server-dev && eb deploy",
     "build": "npx tsc",
     "postbuild": "cp package.json www/package.json && cd www && zip -r ../archive.zip ./* && cd ..",
     "test": "echo \"Error: no test specified\" && exit 1"
